🔢 Solving Complex Equations in Python

--- a/01_linear_algebra.ipynb
+++ b/01_linear_algebra.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "79967f37",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "396d817e",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "8863d88e",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "9c10812c",
    "metadata": {},
    "outputs": [
@@ -68,9 +68,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b083dc79",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a871700c",
+   "metadata": {},
+   "source": [
+    "# 🔢 Solving Complex Equations in Python\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "18be29a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solution X is: [0.33698031-1.73085339j 0.0547046 +1.03719912j]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2x2 Complex Coefficient Matrix\n",
+    "A_complex = np.array([[1+2j, 3-1j],\n",
+    "                      [4+5j, 2+3j]])\n",
+    "\n",
+    "# 2x1 Constant Matrix\n",
+    "B_complex = np.array([5+2j, 7-3j])\n",
+    "\n",
+    "# Solve Ax = B\n",
+    "X_complex = np.linalg.solve(A_complex, B_complex)\n",
+    "\n",
+    "print(\"Solution X is:\", X_complex)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa8549bb",
+   "id": "626100ca",
    "metadata": {},
    "outputs": [],
    "source": []
