--- a/01_linear_algebra.ipynb
+++ b/01_linear_algebra.ipynb
@@ -297,8 +297,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "164c7c16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generate a matrix  of 4x3 dataset\n",
+    "A  = np.random.rand(4,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8769255b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "U , sigma, VT = np.linalg.svd(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e1f1543e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "U Matrix= [[-0.44732626  0.76938584  0.33092521  0.31374057]\n",
+      " [-0.30375339 -0.25787609  0.72345522 -0.56377862]\n",
+      " [-0.66412457  0.05224181 -0.60262335 -0.43937961]\n",
+      " [-0.51630577 -0.58207915  0.06281831  0.62503286]]\n",
+      "--------------------------------\n",
+      "Sigma Matrix= [2.1094287  0.62091463 0.25738013]\n",
+      "--------------------------------\n",
+      "VT Matrix= [[-0.47857411 -0.61482902 -0.62685891]\n",
+      " [-0.74382013 -0.09548828  0.66152369]\n",
+      " [ 0.46658165 -0.78285839  0.41162399]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lets apply SVD here\n",
+    "U, Sigma, VT = np.linalg.svd(A)\n",
+    "# print each matrix separately\n",
+    "print(\"U Matrix=\", U)\n",
+    "print(\"--------------------------------\")\n",
+    "print(\"Sigma Matrix=\",Sigma)\n",
+    "print(\"--------------------------------\")\n",
+    "print(\"VT Matrix=\",VT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ad03d95",
    "metadata": {},
    "outputs": [],
    "source": []
